Add header to page

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href={{ url_for("static", filename="styles.css") }} >
     </head>
     <body>
-        
+        <h1>Spoonacular Review</h1>
         <h3>{{ Results }}</h3>
     </body>
 </html>
