--- a/static/styles.css
+++ b/static/styles.css
@@ -11,7 +11,7 @@ body{
 
 ol{ 
     font-size: 18px;
-    background-color: PaleVioletRed;
+    background-color: #f0ebf8;
     font-family: cursive;
     text-align: left;
 }
