--- a/static/styles.css
+++ b/static/styles.css
@@ -7,7 +7,8 @@ body{
 
 ol{ 
     font-size: 18px;
-    background-color: green;
+    margin-left: 30px;
+    background-color: #039be5;
     font-family: 'Roboto', sans-serif;
     text-align: left;
 }
