Set up spoonacular API and get ingredients from recipe

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,9 @@
                 <hr>
             {% endfor %}
         </ol>
+        {% for i in range(0, ilen) %}
+            <li>{{ Ingredients[i] }}</li>
+        {% endfor %}
     </body>
     <footer> 
         <h4> Created by Richard Nardone </h4>
