Add image of Recipe from Spoonacular

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Spoonacular Review</h1>
+        <img src={{ Url }} alt="Cheetah!" />
         <ol>
             {% for i in range(0, list_len) %}
                 <li>{{ Users[i] }} tweeted:  </li>
