--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,9 @@
     </head>
     <body>
         <h1>Spoonacular Review</h1>
-        <img src={{ Url }} alt="Cheetah!" />
+        <h2>Cuisine: {{ Cuisine }}</h2>
+        <h2>Recipe: {{ Recipe }}</h2>
+        <img src={{ ImageUrl }} alt="food" />
         <ol>
             {% for i in range(0, list_len) %}
                 <li>{{ Users[i] }} tweeted:  </li>
