Add servings, ready time and source url

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,9 @@
         <h1>Spoonacular Review</h1>
         <h2>Cuisine: {{ Cuisine }}</h2>
         <h2>Recipe: {{ Recipe }}</h2>
+        <h2>Link: {{ SpoonUrl }}</h2>
+        <h2>ReadyTime: {{ ReadyTime }}</h2>
+        <h2>Servings: {{ Servings }}</h2>
         <img src={{ ImageUrl }} alt="food" />
         <ol>
             {% for i in range(0, list_len) %}
