--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,7 @@
         <h2>Recipe: {{ Recipe }}</h2>
         <h2>ReadyTime: {{ ReadyTime }}</h2>
         <h2>Servings: {{ Servings }}</h2>
-        <a href={{ SpoonUrl }}>
-        <img src={{ ImageUrl }} alt="food" />
-        </a>
+        <a href={{ SpoonUrl }} target="_blank"><img src={{ ImageUrl }} alt="food" /></a>
         <ol>
             {% for i in range(0, list_len) %}
                 <li>{{ Users[i] }} tweeted:  </li>
