--- a/templates/index.html
+++ b/templates/index.html
@@ -3,25 +3,33 @@
         <title>Spoonacular Review</title>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href={{ url_for("static", filename="styles.css") }} >
+        <div style="background-image: url('static/background.jpg');">
     </head>
     <body>
         <h1>Spoonacular Review</h1>
-        <h2>Cuisine: {{ Cuisine }}</h2>
-        <h2>Recipe: {{ Recipe }}</h2>
-        <h2>ReadyTime: {{ ReadyTime }}</h2>
-        <h2>Servings: {{ Servings }}</h2>
         <a href={{ SpoonUrl }} target="_blank"><img src={{ ImageUrl }} alt="food" /></a>
-        <ol>
-            {% for i in range(0, list_len) %}
-                <li>{{ Users[i] }} tweeted:  </li>
-                <ol>"{{ Texts[i] }}"</ol>
-                <ol> on {{ Times[i] }}</ol>                
-                <hr>
-            {% endfor %}
-        </ol>
-        {% for i in range(0, ilen) %}
-            <li>{{ Ingredients[i] }}</li>
-        {% endfor %}
+        <div class="spoon">
+            <li>Cuisine Origin: {{ Cuisine }}</li>
+            <li>Recipe: {{ Recipe }}</li>
+            <li>ReadyTime: {{ ReadyTime }}</li>
+            <li>Servings: {{ Servings }}</li>
+            
+            <div class="ingredients">
+                <h1>Ingredients: </h1>
+                {% for i in range(0, ilen) %}
+                    <li>{{ Ingredients[i] }}</li>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="tweet">
+            <ol>
+                {% for i in range(0, list_len) %}
+                    <li>{{ Users[i] }} tweeted:  </li>
+                    <ol>"{{ Texts[i] }}"</ol>
+                    <ol> on {{ Times[i] }}</ol>                
+                {% endfor %}
+            </ol>
+        </div>
     </body>
     <footer> 
         <h4> Created by Richard Nardone </h4>
