--- a/static/styles.css
+++ b/static/styles.css
@@ -4,13 +4,14 @@ body{
     color:white;
     background-color: green;
     text-align: center;
+    
 }
 h1 {
     margin: auto;
-    font-size: 30px; 
+    font-size: 40px; 
     border-radius: 20px;
     border-style: solid;
-    background-color:black;
+    background-color:#FF6347;
     color:white;
     padding: 0.5em 0.2em 0.8em 0.5em;
 }
@@ -21,31 +22,35 @@ ol{
     text-align: left;
 }
 .spoon li {
+    margin-top:15px;
+    margin-bottom:15px;
     display: inline-block;
-    margin: auto;
     font-size: 30px; 
     border-radius: 20px;
     border-style: dotted;
-    background-color:black;
+    background-color:#808000;
     color:white;
     padding: 0.5em 0.2em 0.8em 0.5em;
     
 }
-.ingredients h1 {
-    text-align:left;
-    display: inline-block;
+.ingredients {
+    margin-top:15px;
+    margin-bottom:15px;
+    text-align: center;
+    display: block;
     margin: auto;
     font-size: 30px; 
-    border-style: dotted;
+    border-style: solid;
     border-radius: 20px;
-    background-color:black;
+    background-color:#3CB371;
     color:white;
     padding: 0.5em 0.2em 0.8em 0.5em;
 }
 .ingredients li {
-    text-align:left;
+    margin-top:15px;
+    margin-bottom:15px;
+    text-align:center;
     display: inline-block;
-    margin: auto;
     font-size: 20px; 
     border-style: dotted;
     border-radius: 20px;
@@ -54,9 +59,10 @@ ol{
     padding: 0.5em 0.2em 0.8em 0.5em;
 }
 .tweet li {
+    margin-top:15px;
+    margin-bottom:15px;
     display: inline-block;
-    margin: auto;
-    font-size: 30px; 
+    font-size: 20px; 
     border-style:dashed;
     border-radius: 20px;
     background-color:black;
@@ -65,12 +71,13 @@ ol{
     
 }
 .tweet ol {
-    border-style: dashed;
+    margin-top:15px;
+    margin-bottom:15px;
+    border-style: solid;
     display: inline-block;
-    margin: auto;
-    font-size: 20px; 
+    font-size: 25px; 
     border-radius: 20px;
-    background-color:black;
+    background-color:#6495ED;
     color:white;
     padding: 0.5em 0.2em 0.8em 0.5em;
     
@@ -78,17 +85,18 @@ ol{
 li{
     margin: auto;
     text-align: left;
-    font-size: 20px; 
-    border-radius: 20px;
+    font-size: 15px; 
+    border-radius: 15px;
     background-color:black;
     color:white;
 }
 
 img{
+    display:block;
     margin: auto;
-    border-style: dotted;
+    border-style: solid;
     border-radius: 20px;
-    background-color:black;
+    background-color:#D8BFD8;
     color:white;
     padding: 0.8em 0.2em 0.8em 0.5em;
     height:300px;
